small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Fix for bug #1540158 (Broken spells - Face of Death)
 server/attack.c: death attack always kills, no escape from it.
Ryo 2006-08-19

Recollected archetypes in order to integrate fix for bug #1530006:
  lib/smooth, lib/faces, lib/bmaps.paths, lib/bmaps, lib/archetypes,
  lib/animations, lib/crossfire.1, lib/crossfire.0, lib/treasures.bld
Raphael Quinet 2006-08-18

Added a plugin function to get time. Add Python wrapper.
 include/plugin.h sproto.h
 plugins/cfpython/cfpython.c
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/plugins.c
Ryo 2006-08-15

common/map.c, include/plugin.h, plugins/cfpython/{cfpython.c, include/cfpython_map.h,
    include/cfpython_map_private.h}, server/plugins.c, server/server.c,
    server/swap.c: Add EVENT_MAPLOAD and EVENT_MAPUNLOAD, add support to cfpython.
        Modify EVENT_MAP* to send the map object (in place of the path for
        MAPRESET). Impliment wrapper invalidation for cfpython map wrapper objects.
crossedit/stubs.c, include/funcpoint.h, random_maps/standalone.c,
    test/unit/common/stubs_common.c: Allow execute_global_event() to be called from
    common.
Alex Schultz 2006-08-12
    
lib/artifacts: Add artifact descriptions, courtesy of Raphael Quinet. Applies patch
    from tracker item #1538983
Alex Schultz 2006-08-12

server/c_object.c: Corrected a mistake in examine that would display the
    content of a message prefixed by @match to the player.
    Fix for the bug mentioned in #1539227
server/spell_effect.c, common/map.c, common/map.h: Added a field in the map
    structure to store the timestamp of the last original map loading, and
    modified the Town Portal spell so that it now cannot lead to a map that
    was marked before a reset, after a reset.