@@ -19,6 +19,15 @@ Changes for CVS:
 
 Fix for bug #1540158 (Broken spells - Face of Death)
  server/attack.c: death attack always kills, no escape from it.
+-----
+ common/object.c: add "more", "head" and "env" values when dumping an object.
+-----
+Fix for bug #1460251 (Big monsters generated by generators broken). The generators
+ didn't correctly create the other monster parts.
+ common/map.c: move stuff out of link_multipart_objects to object.c
+ common/object.c: add fix_multipart_object function, taken from link_multipart_objects
+ include/libproto.h: new function.
+ server/time.c: call new function when adding big monster.
 Ryo 2006-08-19
 
 Recollected archetypes in order to integrate fix for bug #1530006:
